# gptoss-ollama

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: 1_blog_draft.txt  2_meeting_minutes.txt  3_product_strategy.txt  4_random_notes.txt  5_summary.txt  fs_mcp_server.py  infer.ipynb  mcp_client.py  search_mcp_server.py
